--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
   <section id="sidebar">
     <div class="container">
       <h1 class="name">Renan Dias</h1>
-      <span class="title">Web Developer</span>
+      <span class="title"><img class="icon" src="img/terminal.svg" />Web Developer</span>
       <ul class="menu">
         <li><a href="#portifolio" title="Portifólio">Portifólio</a></li>
         <li><a href="#skills" title="Skills">Skills</a></li>
@@ -64,7 +64,7 @@
 
       <!-- PORTIFOLIO -->
       <div id="portifolio">
-        <h2 class="section-title"><img class="icon" src="img/terminal.svg" />Portifólio</h2>
+        <h2 class="section-title">Portifólio</h2>
         <!-- ITEM 1 -->
         <div class="portifolio-items clearfix">
           <div class="item item-1">
